--- a/Network Policies/policy.yaml
+++ b/Network Policies/policy.yaml
@@ -1,7 +1,7 @@
 apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
-  name: db-test
+  name: dev-app-mysql-backend-policy
 spec:
   podSelector:
     matchLabels:
